--- a/templates/index.html
+++ b/templates/index.html
@@ -6,6 +6,7 @@
     <meta name="description" content="Insightify: A platform for depression self-assessment. Understand your mental health and take steps towards better well-being.">
     <title>Insightify - Depression Self-Assessment</title>
     <link href="{{ url_for('static', filename='css/styles.css') }}" rel="stylesheet">
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 </head>
 <body>
 
@@ -22,9 +23,16 @@
                 <li><a href="{{ url_for('user.contact') }}">Contact</a></li>
             </ul>
         </nav>
-        <div class="logout">
-            <button onclick="logout()">Logout</button>
-        </div>
+        <div class="auth">
+    {% if session.get('user_id') %}
+        <form action="{{ url_for('user.logout') }}" method="POST">
+            <button type="submit">Logout</button>
+        </form>
+    {% else %}
+        <a href="{{ url_for('user.login') }}"><button>Login</button></a>
+        <a href="{{ url_for('user.signup') }}"><button>Sign Up</button></a>
+    {% endif %}
+</div>
     </header>
     
 
