--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -521,7 +521,7 @@ main {
 
 .cta-button {
     display: inline-block;
-    background: linear-gradient(135deg, #2E8B57, #236b44);
+    background: #236b44;
     color: white;
     padding: 15px 35px;
     font-size: 18px;
@@ -603,7 +603,7 @@ footer {
     color: #ecf0f1;
     text-align: center;
     padding: 20px;
-    margin-top: 30px;
+    /* margin-top: 30px; */
 }
 
 footer p {
