--- a/templates/test.html
+++ b/templates/test.html
@@ -201,19 +201,30 @@
 <body>
     <header>
         <div class="logo">
-            <img src="{{ url_for('static', filename='img/logo.PNG') }}" alt="Insightify Logo">
-        </div>
+  <a href="{{ url_for('user.index') }}">
+    <img src="{{ url_for('static', filename='img/logo.PNG') }}" alt="Insightify Logo">
+  </a>
+</div>
+        
         <nav>
             <ul>
-                <li><a href="{{ url_for('user.index') }}">Home</a></li>
+                <!-- <li><a href="{{ url_for('user.index') }}">Home</a></li> -->
+                 <li><a href="{{ url_for('user.depression') }}">Learn about depression</a></li>
                 <li><a href="{{ url_for('user.test') }}">Take the Test</a></li>
                 <li><a href="{{ url_for('user.about') }}">About</a></li>
                 <li><a href="{{ url_for('user.contact') }}">Contact</a></li>
             </ul>
         </nav>
-        <div class="logout">
-            <button onclick="logout()">Logout</button>
-        </div>
+        <div class="auth">
+    {% if session.get('user_id') %}
+        <form action="{{ url_for('user.logout') }}" method="POST">
+            <button type="submit">Logout</button>
+        </form>
+    {% else %}
+        <a href="{{ url_for('user.login') }}"><button>Login</button></a>
+        <a href="{{ url_for('user.signup') }}"><button>Sign Up</button></a>
+    {% endif %}
+</div>
     </header>
 
     <main>
