--- a/templates/phase2.html
+++ b/templates/phase2.html
@@ -223,10 +223,14 @@
           <option value="">--Select an Area--</option>
           <option value="anxiety">Anxiety</option>
           <option value="depression">Depression</option>
-          <option value="sleep">Sleep Problems</option>
+          <option value="sleep">Sleep</option>
+          <option value="stress">Stress</option>
           <option value="career">Career Stress</option>
           <option value="relationship">Relationship Issues</option>
           <option value="addiction">Addiction</option>
+          <option value="wellness">Mental Wellness</option>
+          <option value="grief">Grief</option>
+          <option value="trauma">Trauma</option>
         </select>
       </div>
 
